--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,14 +16,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bienvenido!"
+            android:text="@string/login_bienvenido"
             android:textSize="30sp"
             android:textColor="@color/black"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Loguearse para conectarse con nosotros"/>
+            android:text="@string/login_loguearse_para_conectarse_con_nosotros"/>
         
         <EditText
             android:id="@+id/edt_tel_correo"
@@ -36,7 +36,7 @@
             android:id="@+id/edt_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Contraseña"
+            android:text="@string/login_contrase_a"
             android:layout_marginTop="15dp"/>
         
         <Button
@@ -67,13 +67,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="No tienes una cuenta?"/>
+                android:text="@string/login_no_tienes_una_cuenta"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5sp"
-                android:text="Enscribirse"
+                android:text="@string/login_enscribirse"
                 android:textStyle="bold"/>
 
         </LinearLayout>
