--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,30 +24,49 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login_loguearse_para_conectarse_con_nosotros"/>
-        
-        <EditText
-            android:id="@+id/edt_tel_correo"
+
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/login_edt_email_tel"
-            android:layout_marginTop="50dp"/>
-        
-        <EditText
-            android:id="@+id/edt_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/login_contrase_a"
-            android:layout_marginTop="15dp"/>
+            app:startIconDrawable="@drawable/ic_baseline_account_circle_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_tel_correo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/edt_email"
+                android:layout_marginTop="50dp"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+       <com.google.android.material.textfield.TextInputLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           app:endIconMode="password_toggle"
+           app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">
+
+           <com.google.android.material.textfield.TextInputEditText
+               android:id="@+id/edt_password"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:hint="@string/login_contrase_a"
+               android:layout_marginTop="15dp"
+               android:inputType="textPassword"/>
+
+       </com.google.android.material.textfield.TextInputLayout>
+
         
         <Button
             android:id="@+id/btn_iniciar_sesion"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
             android:textColor="@color/white"
             android:layout_gravity="center"
             android:text="@string/login_btn_iniciar_sesion"
-            android:background="@drawable/login_rounded_button"
+            android:background="@drawable/rounded_button"
             android:layout_marginTop="20dp"/>
         
         <TextView
