--- a/app/src/main/res/layout/activity_signup_ministerio.xml
+++ b/app/src/main/res/layout/activity_signup_ministerio.xml
@@ -78,7 +78,7 @@
 
 
         <Button
-            android:hint="@string/btn_enscribirse"
+            android:hint="@string/btn_registrarse"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
