--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Activities.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
                 android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
 
             <RelativeLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent">
 
                 <ImageView
@@ -41,7 +41,7 @@
                     android:layout_marginTop="18dp"
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="17dp"
-                    android:src="@drawable/ic_baseline_search_24" />
+                    android:src="@drawable/ic_baseline_forum_24" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -49,10 +49,10 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginStart="212dp"
-                    android:layout_marginTop="18dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginBottom="17dp"
+                    android:layout_marginStart="205dp"
+                    android:layout_marginTop="17dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="18dp"
                     android:layout_toStartOf="@+id/messajes"
                     android:src="@drawable/ic_baseline_search_24" />
 
@@ -63,7 +63,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary" />
+            android:background="?attr/colorPrimary"/>
 
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -73,13 +73,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
