--- a/app/src/main/res/layout/row_feed.xml
+++ b/app/src/main/res/layout/row_feed.xml
@@ -22,7 +22,8 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:src="@drawable/perfil"/>
 
 
         <LinearLayout
@@ -38,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
-                android:text="Karun Shrestha"
+                android:text="Devin Lozada"
                 android:textColor="@color/black"
                 android:textSize="17sp" />
 
